--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -708,7 +708,7 @@
                         Fill: =
                         FontColor: =
                         Height: =455
-                        Text: =purchase_header.Shipment_Method_Code
+                        Text: =purchaseJsonData
                         Width: =554
                         X: =0
                         Y: =141
