--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -896,11 +896,11 @@
                     
                     UpdateContext({responseMessage: UpdateXML.Run(purchaseJsonData, SelectedFile, SelectedFolder, nabavniNalogReadyForNavCheckbox.Checked)});
                     
-                    //UpdateContext({parsedResponse : ParseJSON(responseMessage.response)});
+                    UpdateContext({parsedResponse : ParseJSON(responseMessage.response)});
                     
-                    //Navigate(scrEntry,ScreenTransition.Fade);
+                    Navigate(scrEntry,ScreenTransition.Fade);
                     
-                    //Notify(parsedResponse.Message , If(parsedResponse.Status = "200", NotificationType.Success, NotificationType.Error), 2000);
+                    Notify(parsedResponse.Message , If(parsedResponse.Status = "200", NotificationType.Success, NotificationType.Error), 2000);
                     
                 Size: =12
                 Text: ="Sačuvaj"
