--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -135,6 +135,7 @@
   "ScreenOrder": [
     "scrEntry",
     "scr_XMLNabavniNalog",
+    "scr_XMLNalogZaPrenos_1",
     "scr_XMLNalogZaPrenos",
     "scr_XMLNalogZaProdaju",
     "scr_XMLOtpremnice",
