--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -100,7 +100,7 @@
       "zeroalltabindexes": true
     },
     "Author": "",
-    "BindingErrorCount": 0,
+    "BindingErrorCount": 148,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "DesktopOrTablet",
@@ -135,8 +135,8 @@
   "ScreenOrder": [
     "scrEntry",
     "scr_XMLNabavniNalog",
-    "scr_XMLNalogZaPrenos_1",
     "scr_XMLNalogZaPrenos",
+    "scr_XMLNalogZaPrenos11",
     "scr_XMLNalogZaProdaju",
     "scr_XMLOtpremnice",
     "scr_XMLPrimke",
