--- a/BSiNS/Src/App.fx.yaml
+++ b/BSiNS/Src/App.fx.yaml
@@ -8,6 +8,7 @@ App As appinfo:
             Email = User().Email
         );
         warehouseCode = "AM-01";
+        isMobile = If(App.Width > 600, false, true);
     OnStart: =
     StartScreen: =
     Theme: =PowerAppsTheme
