--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -113,10 +113,10 @@
     "DocumentType": "App",
     "EnableInstrumentation": false,
     "FileID": "59b4b38a-4a1b-4c4b-ac59-bfc860c9a040",
-    "Id": "ff6a17d8-c7b1-4cc7-afe0-f843cafb4445",
+    "Id": "b35b18dd-0139-49e1-a028-e3cbb9c382ec",
     "InstrumentationKey": "",
     "ManualOfflineProfileId": "",
-    "Name": "Badeco sljedivost i napredno sklad",
+    "Name": "Badeco%2Bsljedivost%2Bi%2Bnapredno%2Bsklad.msapp",
     "OriginatingVersion": "1.341",
     "ParserErrorCount": 1,
     "ShowStatusBar": false
