--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -475,7 +475,7 @@
                             "03",
                             Navigate(scr_XMLNalogZaProdaju),
                             "04",
-                            Navigate(sc),
+                            Navigate(scr_XMLNalogZaPrenos),
                             "05",
                             Navigate(scr_XMLPrimke),
                             "06",
