--- a/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
@@ -22,8 +22,8 @@
                 UpdateContext(
                     {
                         transfer: GetXML_Nalog_Za_Prenos.Run(
-                            SelectedFile,
-                            SelectedFolder
+                            "AM-01_04_500055",
+                            "ReadyForProcessing"
                         )
                     }
                 )
@@ -107,6 +107,9 @@
             );
             
         );
+        
+        Set(isLoading, false);
+        UpdateContext({wizardStep:1});
 
     NalogZaPrenosScreenContainer_1 As groupContainer.verticalAutoLayoutContainer:
         DropShadow: =DropShadow.Light
@@ -162,7 +165,6 @@
             TransferLineCanvas_1 As fluidGrid.fluidGridWithBlankCard:
                 BorderThickness: =0
                 Height: =611
-                Visible: =wizardStep = 1
                 Width: =Parent.Width
                 ZIndex: =28
 
@@ -790,8 +792,8 @@
                 Height: =30
                 HoverColor: =RGBA(255, 255, 255, 1)
                 HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
-                OnSelect: |+
-                    =UpdateContext({
+                OnSelect: |
+                    =/*UpdateContext({
                         purchaseJsonData:
                         JSON(
                             {
@@ -894,7 +896,7 @@
                     Navigate(scr_XMLNalogZaPrenos,ScreenTransition.Fade);
                     
                     Notify(parsedResponse.Message , If(parsedResponse.Status = "200", NotificationType.Success, NotificationType.Error), 2000);
-                    
+                    */
                 Size: =12
                 Text: ="Sačuvaj"
                 Width: =100
